gitops/apps/komf/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: komf
  labels: &default
    app: komf
    part-of: komf
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels: *default
  template:
    metadata:
      labels: *default
    spec:
      containers:
        - name: komf
          image: sndxr/komf:2.1.0
          ports:
            - name: komf
              containerPort: 8085
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - cp /config-file/* /config/ && sed -i "s|__KOMF_DISCORD_WEBHOOKS__|$KOMF_DISCORD_WEBHOOKS|g" /config/application.yml
          volumeMounts:
            - name: config
              mountPath: /config
            - name: mangas
              mountPath: /mangas
            - name: config-file
              mountPath: /config-file
          readinessProbe:
            tcpSocket:
              port: komf
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: komf
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: config-file
          configMap:
            name: komf
            items:
              - key: application.yml
                path: application.yml
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: mangas
          persistentVolumeClaim:
            claimName: mangas
