gitops/apps/komf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: komf
spec:
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: komf
  selector:
    app: komf
    part-of: komf
